--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     width: 560px;
     height: 300px;
     border: solid black 1px;
+    margin-top: 80px;
 }
 
 .block {
@@ -19,7 +20,7 @@
     background-color: purple; 
 }
 
-.ball{
+.ball {
     position: absolute;
     width: 20px;
     height: 20px;
