--- a/style.css
+++ b/style.css
@@ -2,29 +2,28 @@
     position: absolute;
     width: 560px;
     height: 300px;
-    border: solid black 1px;
-    margin-top: 80px;
-}
-
-.block {
+    border: solid 1px black;
+    margin-top: 100px;
+  }
+  
+  .user {
     position: absolute;
     width: 100px;
     height: 20px;
-    background-color: blue; 
-}
-
-.user {
+    background-color: blueviolet;
+  }
+  
+  .block {
     position: absolute;
     width: 100px;
     height: 20px;
-    background-color: purple; 
-}
-
-.ball {
+    background-color: blue;
+  }
+  
+  .ball {
     position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 10px;
     background-color: red;
-}
-
+  }
